# flux

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
bootstrapper/: .gitignore  CMakeLists.txt  Flux.Bootstrapper.sln
bootstrapper/Flux.Bootstrapper.CLI/: BuildCommand.cs  CreateCommand.cs  Flux.Bootstrapper.CLI.csproj  Program.cs  RunCommand.cs
bootstrapper/Flux.Bootstrapper.CLI/Properties/: launchSettings.json
bootstrapper/Flux.Bootstrapper.Core/: BuildService.cs  Class1.cs  Flux.Bootstrapper.Core.csproj  IBuildService.cs  IProjectService.cs  ProjectService.cs
bootstrapper/Flux.Bootstrapper.Core/Configurations/: ProjectFile.cs  ProjectUserFile.cs  RuntimeConfigurationFile.cs
bootstrapper/Flux.Bootstrapper.Core/ProjectFiles/: ConfigurationFile.cs  MetadataFile.cs
bootstrapper/Flux.Bootstrapper.Core/TemplateFiles/: Main.cs.template  game.csproj.template  main.cpp.template
bootstrapper/Flux.Bootstrapper.Core/Utils/: FileUtils.cs
cmake/: platform.cmake  source_group.cmake
demo/: CMakeLists.txt
demo/demo-cpp/: CMakeLists.txt
demo/demo-cpp/assets/: CMakeLists.txt
demo/demo-cpp/assets/images/: CMakeLists.txt
demo/demo-cpp/assets/meshes/: CMakeLists.txt
demo/demo-cpp/assets/shaders/: CMakeLists.txt  basic.frag  basic.vert  cube.frag  cube.vert  model.frag  model.vert  textured_quad.frag  textured_quad.vert
demo/demo-cpp/src/: main.cpp
flux/: CMakeLists.txt
flux/cmake/: platform.cmake  source_group.cmake
flux/include/: flux.h
flux/include/flux/core/: Application.h  EntryPoint.h  Ref.h  base.h
flux/include/flux/events/: KeyEvent.h  MouseEvent.h  WindowEvent.h
flux/include/flux/project/: Project.h
flux/include/flux/renderer/: Image.h  PerspectiveCamera.h  ShaderInputSet.h  VertexBuffer.h
flux/include/flux/scripting/: ScriptModule.h  ScriptObject.h
flux/include/flux/util/: Math.h
flux/include/flux/window/: Window.h
flux/src/flux/core/: Application.cpp  RefCounted.cpp
flux/src/flux/renderer/: Renderer2D.cpp
host/: CMakeLists.txt
host/src/: main.cpp
runtime/: CMakeLists.txt
runtime/cmake/: platform.cmake  source_group.cmake
runtime/flux/core/: Logger.cpp
runtime/flux/core/delegate/: DelegateBase.h
runtime/flux/renderer/: Framebuffer.cpp  Image.cpp  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderCommandBuffer.cpp  Renderer2D.cpp  Shader.cpp  ShaderInputSet.cpp  ShaderInputSet.h  UniformBuffer.cpp  VertexArray.cpp
runtime/flux/window/: Window.cpp
runtime/include/: flux.h  fxpch.h
runtime/include/flux/core/: Application.h  LogManager.h  Logger.h
runtime/include/flux/core/codes/: MouseCodes.h
runtime/include/flux/core/delegate/: Delegate.h
runtime/include/flux/events/: AppEvent.h  Event.h  EventTypeRegistry.h
runtime/include/flux/project/: Project.h
runtime/include/flux/renderer/: Framebuffer.h  Image.h  IndexBuffer.h  OrthographicCamera.h  Pipeline.h  RenderCommandBuffer.h  RenderPass.h  Renderer2D.h  RendererAPI.h  Shader.h  ShaderInputSet.h  UniformBuffer.h  VertexArray.h  VertexBuffer.h
runtime/include/flux/scripting/: ScriptEngine.h
runtime/include/flux/util/: File.h
runtime/include/flux/window/: Window.h
runtime/include/platform/vulkan/: VulkanShaderInputSet.h  VulkanUtils.h
runtime/platform/vulkan/: VulkanAllocator.cpp  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanContext.cpp  VulkanDescriptorPool.cpp  VulkanDevice.cpp  VulkanIndexBuffer.cpp  VulkanPhysicalDevice.cpp  VulkanPipeline.cpp  VulkanRenderCommandBuffer.cpp  VulkanRenderer.cpp  VulkanShader.cpp  VulkanShaderInputSet.cpp  VulkanSwapchain.cpp  VulkanUniformBuffer.cpp  VulkanUtils.cpp
runtime/src/: main.cpp
runtime/src/flux/core/: Application.cpp  LogManager.cpp  Logger.cpp
runtime/src/flux/events/: Event.cpp  EventTypeRegistry.cpp
runtime/src/flux/project/: Project.cpp
runtime/src/flux/renderer/: GraphicsContext.cpp  IndexBuffer.cpp  OrthographicCamera.cpp  Pipeline.cpp  Renderer2D.cpp  RendererAPI.cpp  VertexArray.cpp  VertexBuffer.cpp
runtime/src/flux/scripting/: ScriptEngine.cpp  ScriptModule.cpp
runtime/src/flux/window/: Window.cpp
runtime/src/platform/opengl/: OpenGLContext.cpp
runtime/src/platform/vulkan/: VulkanAllocator.cpp  VulkanContext.cpp  VulkanDevice.cpp  VulkanFramebuffer.cpp  VulkanImage.cpp  VulkanRenderCommandBuffer.cpp  VulkanRenderer.h  VulkanShaderInputSet.cpp  VulkanSwapchain.cpp  VulkanVertexArray.h  VulkanVertexBuffer.cpp
scriptcore/: .gitignore  CMakeLists.txt  Class1.cs  Flux.ScriptCore.sln
src/: pch.h
src/flux/core/: LogManager.cpp  LogManager.h  Logger.cpp  Ref.h  RefCounted.cpp  RefCounted.h  base.h
src/flux/renderer/: Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  Image.cpp  Image.h  IndexBuffer.cpp  PerspectiveCamera.cpp  Pipeline.cpp  Pipeline.h  RenderCommandBuffer.cpp  RenderCommandBuffer.h  RenderPass.h  RenderStates.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  ShaderInputSet.cpp  UniformBuffer.cpp  UniformBuffer.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/flux/util/: Singleton.h
src/flux/window/: Window.cpp  Window.h
src/platform/glfw/: WindowGlfw.cpp  WindowGlfw.h
src/platform/opengl/: OpenGLContext.cpp  OpenGLContext.h
src/platform/vulkan/: VulkanAllocator.cpp  VulkanAllocator.h  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanImage.cpp  VulkanImage.h  VulkanIndexBuffer.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderCommandBuffer.cpp  VulkanRenderCommandBuffer.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanUtils.cpp  VulkanUtils.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
tools/: build.py  create-dist.py
(+14 files in other folders)
